footer and correction of horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ img {
 /* CANCELLA */
 * {
   /* border: #C5654B 1px solid; */
+  /* max-width: 10vw !important; */
 }
 
 /* CANCELLA */
@@ -66,6 +67,7 @@ body {
   color: var(--primary-color);
   position: relative;
 
+  /* width: 100vw; */
   /* display: flex;
   flex-direction: column; */
 
@@ -163,6 +165,7 @@ header {
     left: 0%;
     transform: translate(0%, 0%);
     height: 30px;
+    max-width: 100vw;
     /* background-color: var(--bg-color); */
   }
 
@@ -170,6 +173,7 @@ header {
     flex-direction: row;
     justify-content: space-around;
     /* gap: 50px; */
+    max-width: 100%;
 
   }
 
@@ -238,7 +242,7 @@ header {
   flex-direction: column;
   /* gap: 20px; */
 
-
+  
 }
 
 .about-h2 {
@@ -262,6 +266,8 @@ header {
   background-repeat: no-repeat;
   background-position: 50% 0%;
   /* background-size: 80%; */
+
+  
 }
 
 .about_div_about {
@@ -271,6 +277,7 @@ header {
   justify-content: space-around;
   /* gap: 10px; */
   height: 50%;
+  max-width: 100%;
 
 
 }
@@ -638,4 +645,20 @@ header {
     height: 80%;
     max-width: 100%;
   }
+}
+
+/* footer  */
+
+footer{
+  background-color: var(--secondary-color);
+  width: 100%;
+  height: fit-content;
+  margin-top: 40px;
+  padding: 20px 0px;
+}
+
+footer p {
+  font-size: var(--normal-size-mobile);
+  color: white;
+  padding-left: 20px;
 }
